--- a/index.html
+++ b/index.html
@@ -5,60 +5,182 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Troll UI</title>
   <style>
-    /* Reset default styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      background: #000; /* black screen */
+      background: #000;
       font-family: Arial, sans-serif;
+      transition: background 0.5s ease, color 0.5s ease;
+    }
+
+    body.light {
+      background: #f0f0f0;
+      color: #222;
     }
 
     .ui-box {
-      background: linear-gradient(145deg, #333, #555); /* gray gradient */
+      background: rgba(60, 60, 60, 0.6); /* semi-transparent for blur */
+      backdrop-filter: blur(15px);
       padding: 40px;
       border-radius: 20px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      gap: 20px;
+      align-items: center;
     }
 
     .glass-btn {
       padding: 15px 40px;
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: bold;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       color: #fff;
-      background: linear-gradient(135deg, #7f00ff, #e100ff); /* purple gradient */
+      background: linear-gradient(135deg, #7f00ff, #e100ff);
       backdrop-filter: blur(10px);
       box-shadow: 0 4px 15px rgba(128, 0, 255, 0.6);
       transition: all 0.3s ease;
     }
 
     .glass-btn:hover {
-      transform: scale(1.1);
+      transform: scale(1.08);
       box-shadow: 0 6px 20px rgba(128, 0, 255, 0.8);
+    }
+
+    .calculator {
+      display: none;
+      margin-top: 20px;
+      padding: 20px;
+      border-radius: 15px;
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(10px);
+    }
+
+    body.light .calculator {
+      background: rgba(0, 0, 0, 0.1);
+    }
+
+    .calculator input {
+      width: 100%;
+      font-size: 1.2rem;
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      margin-bottom: 10px;
+      text-align: right;
+    }
+
+    .calc-buttons {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+    }
+
+    .calc-btn {
+      padding: 15px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      background: #888;
+      color: #fff;
+    }
+
+    body.light .calc-btn {
+      background: #333;
     }
   </style>
 </head>
 <body>
   <div class="ui-box">
     <button class="glass-btn" id="trollBtn">Click Me</button>
+    <button class="glass-btn" id="fullscreenBtn">Fullscreen</button>
+    <button class="glass-btn" id="youtubeBtn">Random YouTube</button>
+    <button class="glass-btn" id="calcBtn">Calculator + Theme Toggle</button>
+
+    <div class="calculator" id="calculator">
+      <input type="text" id="calcDisplay" readonly>
+      <div class="calc-buttons">
+        <button class="calc-btn">7</button>
+        <button class="calc-btn">8</button>
+        <button class="calc-btn">9</button>
+        <button class="calc-btn">/</button>
+        <button class="calc-btn">4</button>
+        <button class="calc-btn">5</button>
+        <button class="calc-btn">6</button>
+        <button class="calc-btn">*</button>
+        <button class="calc-btn">1</button>
+        <button class="calc-btn">2</button>
+        <button class="calc-btn">3</button>
+        <button class="calc-btn">-</button>
+        <button class="calc-btn">0</button>
+        <button class="calc-btn">.</button>
+        <button class="calc-btn">=</button>
+        <button class="calc-btn">+</button>
+      </div>
+    </div>
   </div>
 
   <script>
-    const button = document.getElementById("trollBtn");
-    button.addEventListener("click", () => {
-      button.textContent = "YOU BEEN TROLLED";
+    // Troll button toggle
+    const trollBtn = document.getElementById("trollBtn");
+    trollBtn.addEventListener("click", () => {
+      trollBtn.textContent = "YOU BEEN TROLLED";
+      setTimeout(() => {
+        trollBtn.textContent = "Click Me";
+      }, 10000); // revert after 10s
+    });
+
+    // Fullscreen button
+    document.getElementById("fullscreenBtn").addEventListener("click", () => {
+      if (!document.fullscreenElement) {
+        document.documentElement.requestFullscreen();
+      } else {
+        document.exitFullscreen();
+      }
+    });
+
+    // Random YouTube button
+    const youtubeLinks = [
+      "https://www.youtube.com/watch?v=dQw4w9WgXcQ",
+      "https://www.youtube.com/watch?v=QH2-TGUlwu4",
+      "https://www.youtube.com/watch?v=DLzxrzFCyOs",
+      "https://www.youtube.com/watch?v=j5a0jTc9S10"
+    ];
+    document.getElementById("youtubeBtn").addEventListener("click", () => {
+      const random = youtubeLinks[Math.floor(Math.random() * youtubeLinks.length)];
+      window.open(random, "_blank");
+    });
+
+    // Calculator + Theme toggle
+    const calcBtn = document.getElementById("calcBtn");
+    const calculator = document.getElementById("calculator");
+    const display = document.getElementById("calcDisplay");
+    const buttons = document.querySelectorAll(".calc-btn");
+
+    calcBtn.addEventListener("click", () => {
+      calculator.style.display = calculator.style.display === "block" ? "none" : "block";
+      document.body.classList.toggle("light");
+    });
+
+    buttons.forEach(btn => {
+      btn.addEventListener("click", () => {
+        if (btn.textContent === "=") {
+          try {
+            display.value = eval(display.value);
+          } catch {
+            display.value = "Error";
+          }
+        } else {
+          display.value += btn.textContent;
+        }
+      });
     });
   </script>
 </body>
